# rustor

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  PHASE5_PLAN.md  README.md  action.yml  development_log.md  php-refactor-complete-plan.md  rustor_vs_phpstan_comparison.md
crates/rustor-analyze/: Cargo.toml
crates/rustor-analyze/src/: baseline.rs  issue.rs  lib.rs  logging.rs
crates/rustor-analyze/src/autoload/: cache.rs  include_scanner.rs  mod.rs
crates/rustor-analyze/src/checks/: mod.rs
crates/rustor-analyze/src/checks/level0/: argument_count.rs  call_methods.rs  call_static_methods.rs  class_constant.rs  class_name_case.rs  invalid_static_new.rs  missing_return.rs  mod.rs  property_access.rs  static_property.rs  undefined_class.rs  undefined_constant.rs  undefined_function.rs
crates/rustor-analyze/src/checks/level1/: isset_variable.rs  magic_methods.rs  mod.rs  undefined_variable.rs  unused_parameter.rs
crates/rustor-analyze/src/checks/level10/: echo_non_string.rs  implicit_mixed.rs  mod.rs
crates/rustor-analyze/src/checks/level2/: argument_count.rs  call_methods.rs  mod.rs  property_access.rs  void_pure.rs
crates/rustor-analyze/src/checks/level3/: mod.rs  property_type.rs  return_type.rs
crates/rustor-analyze/src/checks/level4/: always_false_boolean.rs  dead_code.rs  invalid_binary_op.rs  mod.rs  unused_result.rs  write_only_property.rs
crates/rustor-analyze/src/checks/level5/: argument_type.rs  mod.rs
crates/rustor-analyze/src/checks/level6/: already_narrowed_type.rs  generics.rs  missing_typehints.rs  mod.rs  phpdoc_types.rs
crates/rustor-analyze/src/checks/level7/: mod.rs  union_type.rs
crates/rustor-analyze/src/checks/level8/: mod.rs  (+1 more)
crates/rustor-analyze/src/config/: composer.rs  level.rs  mod.rs  phpstan.rs
crates/rustor-analyze/src/output/: github.rs  json.rs  mod.rs  raw.rs  table.rs
crates/rustor-analyze/src/resolver/: expression_resolver.rs  mod.rs  node_scope_resolver.rs  symbol_collector.rs
crates/rustor-analyze/src/scope/: class_context.rs  function_context.rs  mod.rs  scope.rs
crates/rustor-analyze/src/symbols/: class_info.rs  function_info.rs  mod.rs  symbol_table.rs
crates/rustor-analyze/src/types/: mod.rs  php_type.rs  phpdoc.rs  trinary_logic.rs  type_ops.rs
crates/rustor-cli/: Cargo.toml  README.md
crates/rustor-cli/src/: analyze.rs  backup.rs  baseline.rs  cache.rs  config.rs  fixer.rs  git.rs  ignore.rs  lsp.rs  main.rs  output.rs  plugin.rs  process.rs  watch.rs
crates/rustor-fixer/: Cargo.toml
crates/rustor-fixer/src/: lib.rs
crates/rustor-fixer/src/config/: mod.rs  php_parser.rs  presets.rs  whitespace.rs
crates/rustor-fixer/src/fixers/: mod.rs  registry.rs
crates/rustor-rector-import/: Cargo.toml  README.md
crates/rustor-rector-import/src/: ast_analyzer.rs  ast_mapper.rs  codegen.rs  lib.rs  main.rs  pattern_detector.rs  php_parser.rs  report.rs  rule_extractor.rs  templates.rs  yaml_codegen.rs
crates/rustor-rector-import/tests/: rector_integration_test.rs
crates/rustor-rules/: Cargo.toml  README.md  TUTORIAL.md
crates/rustor-rules/rules/: array_push_to_assignment.yaml  is_null_to_comparison.yaml  join_to_implode.yaml  sizeof_to_count.yaml  strpos_to_str_contains.yaml
crates/rustor-rules/src/: array_first_last.rs  array_key_exists_to_coalesce.rs  array_key_first_last.rs  array_merge_simple.rs  array_push.rs  array_syntax.rs  arrow_functions.rs  assign_coalesce.rs  attribute_key_to_class_const_fetch.rs  class_constant_to_self_class.rs  class_constructor.rs  class_on_object.rs  common_not_equal.rs  const_fetch_to_class_const_fetch.rs  constructor_promotion.rs  dirname_dir_concat.rs  dirname_file_to_dir.rs  double_negation_to_cast.rs  dynamic_class_const_fetch.rs  empty_coalesce.rs  explicit_nullable_param.rs  filter_var_to_addslashes.rs  first_class_callables.rs  flip_negated_ternary_instanceof.rs  foreach_to_array_all.rs  foreach_to_array_any.rs  foreach_to_array_find.rs  foreach_to_array_find_key.rs  func_call_to_const_fetch.rs  func_call_to_new.rs  func_call_to_static_call.rs  get_called_class_to_static.rs  get_class_this.rs  get_debug_type.rs  hebrevc_to_nl2br_hebrev.rs  implode_order.rs  is_countable.rs  is_null.rs  isset_coalesce.rs  join_string_concat.rs  (+70 more)
crates/rustor-rules/src/imported/: array_key_exists_on_property.rs  class_on_object.rs  consistent_implode.rs  filter_var_to_add_slashes.rs  get_class_on_null.rs  hebrevc_to_nl_2_br_hebrev.rs  inline_is_a_instance_of.rs  is_a_with_string_with_third_argument.rs  mod.rs  pow_to_exp.rs  preg_replace_e_modifier.rs  remove_get_class_get_parent_class_no_args.rs  remove_sole_value_sprintf.rs  remove_useless_is_object_check.rs  rename_mktime_without_args_to_time.rs  restore_include_path_to_ini_restore.rs  simplify_strpos_lower.rs  str_starts_with.rs  ternary_implode_to_implode.rs  unwrap_sprintf_one_argument.rs  utf_8_decode_encode_to_mb_convert_encoding.rs
crates/rustor-rules/src/yaml_rules/: interpreter.rs  loader.rs  matcher.rs  mod.rs  replacer.rs  schema.rs
(+308 files in other folders)
