[workspace]
resolver = "2"
members = [
    "crates/rustor-core",
    "crates/rustor-rules",
    "crates/rustor-cli",
    "crates/rustor-rector-import",
    "crates/rustor-analyze",
    "crates/rustor-fixer",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

# Profile for maximum speed (less debugging info)
[profile.release-fast]
inherits = "release"
debug = false
