[package]
name = "rustor-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustor"
path = "src/main.rs"

[dependencies]
rustor-core = { path = "../rustor-core" }
rustor-rules = { path = "../rustor-rules" }
rustor-analyze = { path = "../rustor-analyze" }
rustor-fixer = { path = "../rustor-fixer" }
mago-syntax = "1.0"
mago-span = "1.0"
mago-database = "1.0"
bumpalo = "3.16"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"
walkdir = "2.5"
diff = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
glob = "0.3"
rayon = "1.10"

# Phase 4: Caching
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Phase 4: Watch mode
notify = "6.1"
notify-debouncer-mini = "0.4"

# Phase 4: Better output formats
similar = "2.6"

# Phase 5: Progress bar and TTY detection
indicatif = "0.17"
atty = "0.2"

# Phase 6: Backup timestamps
chrono = "0.4"

# Phase 6: LSP server
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-std"] }

# Phase 7: Plugin system
dirs = "5.0"

[dev-dependencies]
tempfile = "3.17"
