[package]
name = "rustor-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
rustor-core = { path = "../rustor-core" }
mago-syntax = "1.0"
mago-span = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
thiserror = "1.0"

[dev-dependencies]
bumpalo = "3.16"
mago-database = "1.0"
